# tick

./: .gitignore  .travis.yml  setup.py
DOC_C/: mainpage.dox
doc/: conf.py
doc/modules/: api.rst  dev.rst  inference.rst  simulation.rst
examples/: plot_poisson_regression.py
tick/: CMakeLists.txt  backtrace.in
tick/base/: CMakeLists.txt
tick/base/array/src/: abstractarray1d2d.h  array.h  array2d.h  basearray.h  carray_python.h  sarray.h  sarray2d.h  sparsearray.h  varray.h
tick/base/array/swig/: CMakeLists.txt  array_test_cfunc.i  array_typemap_in.i  basearray_typemap_in.i  sarray_typemap_in.i  sarray_typemap_out.i  sbasearray_typemap_in.i  sparsearray_typemap_in.i  ssparsearray_typemap_in.i
tick/base/array/tests/src/: array_gtest.cpp  varray_gtest.cpp
tick/base/array_test/src/: array_test.cpp  array_test.h  performance_test.h  sbasearray_container.h  timer.h  typemap_test.cpp  typemap_test.h
tick/base/array_test/swig/: CMakeLists.txt  array_test.i  performance_test.i
tick/base/src/: CMakeLists.txt  base.h  debug.h  defs.h  exceptions_test.h  interruption.h  tick_python.h  time_func.cpp  time_func.h
tick/base/src/math/: normal_distribution.cpp  normal_distribution.h  t2exp.cpp  t2exp.h
tick/base/swig/: CMakeLists.txt  normal_distribution.i
tick/base/tests/src/: utils_gtest.cpp
tick/inference/: __init__.py  cox_regression.py  logistic_regression.py  poisson_regression.py  survival.py
tick/inference/base/: learner_glm.py  learner_optim.py
tick/inference/src/: hawkes_adm4.cpp  hawkes_basis_kernels.cpp  hawkes_conditional_law.cpp  hawkes_conditional_law.h  hawkes_em.cpp  hawkes_sumgaussians.cpp
tick/inference/swig/: CMakeLists.txt  hawkes_conditional_law.i  inference_module.i
tick/inference/tests/: coxreg_test.py  logreg_test.py  poisreg_test.py  poisson_regression_test.py  survival_test.py
tick/metrics/: __init__.py  kaplan_meier_estimator.py  nelson_aalen_estimator.py
tick/optim/model/: sccs.py
tick/optim/model/src/: CMakeLists.txt  coxreg_partial_lik.cpp  coxreg_partial_lik.h  hawkes_fixed_expkern_leastsq.cpp  hawkes_fixed_expkern_loglik.cpp  hawkes_fixed_sumexpkern_leastsq.cpp  linreg.h  model.h  model_generalized_linear.cpp  model_generalized_linear_with_intercepts.cpp  poisreg.cpp  poisreg.h  sccs.cpp  sccs.h
tick/optim/model/src/base/: hawkes_model.cpp  hawkes_model.h
tick/optim/model/src/variants/: hawkes_fixed_expkern_leastsq_list.cpp  hawkes_fixed_expkern_loglik_list.cpp  hawkes_fixed_sumexpkern_leastsq_list.cpp
tick/optim/model/swig/: CMakeLists.txt  hawkes_fixed_expkern_loglik.i  model.i  model_generalized_linear.i  model_generalized_linear_with_intercepts.i  model_labels_features.i
tick/optim/model/tests/: sccs_test.py
tick/optim/prox/: __init__.py  prox_binarsity.py
tick/optim/prox/src/: CMakeLists.txt  prox.cpp  prox.h  prox_binarsity.cpp  prox_binarsity.h  prox_elasticnet.cpp  prox_elasticnet.h  prox_equality.cpp  prox_equality.h  prox_l1.cpp  prox_l1.h  prox_l1w.cpp  prox_l1w.h  prox_l2sq.cpp  prox_l2sq.h  prox_multi.cpp  prox_multi.h  prox_positive.cpp  prox_positive.h  prox_separable.cpp  prox_separable.h  prox_slope.cpp  prox_slope.h  prox_sorted_l1.cpp  prox_sorted_l1.h  prox_tv.cpp  prox_tv.h  prox_zero.cpp  prox_zero.h
tick/optim/prox/swig/: CMakeLists.txt  prox.i  prox_binarsity.i  prox_elasticnet.i  prox_equality.i  prox_l1.i  prox_l1w.i  prox_l2sq.i  prox_module.i  prox_positive.i  prox_separable.i  prox_slope.i  prox_tv.i  prox_zero.i
tick/optim/prox/tests/: prox_binarsity_test.py
tick/optim/solver/src/: sto_solver.cpp  sto_solver.h
tick/optim/solver/swig/: CMakeLists.txt  adagrad.i  sdca.i  sgd.i  sto_solver.i  svrg.i
tick/preprocessing/: longitudinal_features_lagger.py
tick/preprocessing/src/: longitudinal_features_lagger.h
tick/preprocessing/swig/: CMakeLists.txt
tick/random/src/: CMakeLists.txt  rand.cpp  rand.h  test_rand.cpp
tick/random/swig/: CMakeLists.txt  crandom.i
tick/random/tests/: random_test.py
tick/simulation/: SCCS.py  __init__.py
tick/simulation/src/: poisson.h  pp.cpp  pp.h
tick/simulation/src/hawkes_kernels/: hawkes_kernel.h  hawkes_kernel_power_law.h  hawkes_kernel_sum_exp.h
tick/simulation/swig/: CMakeLists.txt
tick/simulation/tests/: SCCS_test.py
tick/simulation/tests/src/: CMakeLists.txt  hawkes_kernel_exp_gtest.cpp  hawkes_kernel_sumexp_gtest.cpp
tools/travis/: osx_install.sh
